--- a/index.Rmd
+++ b/index.Rmd
@@ -69,7 +69,9 @@ barplot(height = ca_covid19$confirmados)
 4. (10%) Con la función  ```order()```, ordene el data frame por cantidad de casos confirmados y genere de nuevo el gráfico.
 
 ```{r}
-
+confirmados.ordenado <- order(ca_covid19$confirmados, decreasing=FALSE)
+ca_covid19.confirmados <- ca_covid19[confirmados.ordenado,]
+barplot(height=ca_covid19.confirmados$confirmados,)
 ```
 
 5. (10%) Incluya en el gráfico los siguientes componentes:
@@ -78,7 +80,12 @@ barplot(height = ca_covid19$confirmados)
 - Titulo del gráfico.
 
 ```{r}
-
+barplot(
+  height=ca_covid19.confirmados$confirmados, 
+  names.arg=ca_covid19.confirmados$pais, 
+  xlab="País", 
+  ylab="Casos confirmados", 
+  main="Casos confirmados de Covid-19 en países centroamericanos y DOM")
 ```
 
 6. Genere gráficos similares al del paso anterior para:
@@ -86,9 +93,23 @@ barplot(height = ca_covid19$confirmados)
 - (25%) Casos fallecidos.
 
 ```{r}
-
+activos.ordenado <- order(ca_covid19$activos, decreasing=FALSE)
+ca_covid19.activos <- ca_covid19[activos.ordenado,]
+barplot(
+  height=ca_covid19.activos$activos,
+  names.arg=ca_covid19.activos$pais, 
+  xlab="País", 
+  ylab="Casos activos", 
+  main="Casos activos de Covid-19 en países centroamericanos y DOM")
 ```
 
 ```{r}
-
+fallecidos.ordenado <- order(ca_covid19$fallecidos, decreasing=FALSE)
+ca_covid19.fallecidos <- ca_covid19[fallecidos.ordenado,]
+barplot(
+  height=ca_covid19.fallecidos$fallecidos,
+  names.arg=ca_covid19.fallecidos$pais, 
+  xlab="País", 
+  ylab="Casos fallecidos", 
+  main="Casos fallecidos de Covid-19 en países centroamericanos y DOM")
 ```
